jilles      2006/07/26 11:39:11 UTC	(20060726-5947)
  Log:
  Use me.recvsvr for all protocols instead of just P10.
  This indicates whether we have received a SERVER message;
  if this is the case all commands must come from an existing
  user or server (will be implemented).
  Note that this flag is only valid if me.connected is true.
  

  Changes:	Modified:
  +1 -1		trunk/include/atheme.h (File Modified) 
  +0 -1		trunk/protocol/asuka.c (File Modified) 
  +2 -0		trunk/protocol/bahamut.c (File Modified) 
  +0 -1		trunk/protocol/bircd.c (File Modified) 
  +4 -0		trunk/protocol/charybdis.c (File Modified) 
  +2 -0		trunk/protocol/dreamforge.c (File Modified) 
  +4 -0		trunk/protocol/hybrid.c (File Modified) 
  +2 -0		trunk/protocol/hyperion.c (File Modified) 
  +2 -0		trunk/protocol/inspircd.c (File Modified) 
  +2 -0		trunk/protocol/ircnet.c (File Modified) 
  +0 -1		trunk/protocol/nefarious.c (File Modified) 
  +2 -0		trunk/protocol/plexus.c (File Modified) 
  +2 -0		trunk/protocol/ptlink.c (File Modified) 
  +4 -0		trunk/protocol/ratbox.c (File Modified) 
  +2 -0		trunk/protocol/shadowircd.c (File Modified) 
  +2 -0		trunk/protocol/solidircd.c (File Modified) 
  +2 -0		trunk/protocol/sorcery.c (File Modified) 
  +2 -0		trunk/protocol/ultimate3.c (File Modified) 
  +0 -1		trunk/protocol/undernet.c (File Modified) 
  +2 -0		trunk/protocol/unreal.c (File Modified) 
  +2 -0		trunk/src/packet.c (File Modified) 


nenolod     2006/07/25 20:50:58 UTC	(20060725-5945)
  Log:
  - rewrite some code here to work with the dtree stuff
  

  Changes:	Modified:
  +25 -28	trunk/src/services.c (File Modified) 


nenolod     2006/07/25 20:28:25 UTC	(20060725-5943)
  Log:
  - services are now stored in a dtree
  

  Changes:	Modified:
  +8 -24	trunk/src/servtree.c (File Modified) 


nenolod     2006/07/25 20:09:08 UTC	(20060725-5941)
  Log:
  - add dictionary_foreach() for iterating over all entries in a dtree.